<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.ahk.tcpcommunication.features.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/ip"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:clickable="false"
                android:enabled="false"
                android:hint="@string/ip" />

            <EditText
                android:id="@+id/port"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/port"
                android:inputType="number" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ip"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:drawableStart="@drawable/ic_login"
                android:text="@string/login"
                android:onClick="@{() -> viewModel.onLoginClicked()}"
                />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>